# games

./: .editorconfig  .gdbinit  .gitignore  .gitmodules  README.md  TODO  common.cmake
astrum/: CMakeLists.txt
astrum/assets/meshes/: fruit-tree-0.lmesh  fruit-tree-1.lmesh  fruit-tree-2.lmesh  luna.terrain  oak-tree-0.lmesh  oak-tree-1.lmesh  oak-tree-2.lmesh  palm-tree-0.lmesh  palm-tree-2.lmesh  pine-tree-0.lmesh  pine-tree-1.lmesh  pine-tree-2.lmesh  sol.terrain  terra.terrain
astrum/assets/models/: fruit-tree-1.blend  fruit-tree-1.dae  fruit-tree-2.dae  fruit-tree.blend  oak-tree.blend  oak-tree.dae  palm-tree.blend  palm-tree.dae  pine-tree.blend  pine-tree.dae  spaceship.blend  spaceship.dae
astrum/assets/shaders/: additive.frag  atmosphere.frag  brightness.frag  gaussian.frag  hdr.frag  path.vert  post.vert  tone_mapping.frag
astrum/src/: constants.h  main.cpp  paths.cpp  paths.h  solar_system.cpp  solar_system.h  spinny_cube.cpp  types.h  util.cpp  util.h
astrum/src/controllers/: game.cpp  game.h  map.cpp  map.h  person.cpp  person.h  spaceship.cpp  spaceship.h
astrum/src/demos/: importy.cpp  loddy.cpp  noisy.cpp  physicy.cpp  spinny.cpp
astrum/src/entities/: celestial_bodies.cpp  celestial_bodies.h  luna.cpp  luna.h  people.cpp  people.h  rocks.cpp  rocks.h  sol.cpp  sol.h  spaceships.cpp  spaceships.h  terra.cpp  terra.h  trees.cpp  trees.h
astrum/src/meshes/: ico_chunks.cpp  ico_chunks.h  ico_faces.cpp  ico_faces.h  lod_shaders.cpp  lod_shaders.h  lods.cpp  lods.h  patchwork.cpp  patchwork.h  sphere_ico.cpp  sphere_ico.h  sphere_ico_find.cpp
astrum/src/physics/: centering.cpp  centering.h  gravity.cpp  gravity.h  point_masses.cpp  point_masses.h  relativity.cpp  relativity.h  util.cpp  util.h
astrum/src/post-processing/: atmosphere.cpp  atmosphere.h  bloom.cpp  bloom.h  hdr_resolve.cpp  hdr_resolve.h  pass.cpp  pass.h  tone_mapping.cpp  tone_mapping.h  util.cpp  util.h
astrum/src/spatial/: ico_tree.cpp  ico_tree.h  icotree.cpp  icotree.h
astrum/src/terrain/: mesh.cpp  mesh.h  metadata.cpp  metadata.h  shaders.cpp  shaders.h  sphere_ico.cpp  sphere_ico.h  static_bodies.cpp  static_bodies.h  terrain.cpp  terrain.h  terrain_chunk.cpp  terrain_chunk.h
fast-dom/: CMakeLists.txt
fast-dom/assets/shaders/: dom.frag  dom.vert
fast-dom/src/: main.cpp
fast-dom/src/css/: parsing.cpp  parsing.h  types.h
fast-dom/src/html/: attributes.cpp  attributes.h  layout.cpp  layout.h  parsing.cpp  parsing.h  types.h
fast-dom/src/util/: str.h
ludo/: CMakeLists.txt
ludo-assimp/: CMakeLists.txt
ludo-assimp/src/ludo/assimp/: animation.cpp  animation.h  api.h  import.cpp  import.h  importing.cpp  math.cpp  math.h  meshes.cpp  meshes.h  physics.cpp  physics.h  textures.cpp  textures.h  util.cpp  util.h
ludo-bullet/: CMakeLists.txt
ludo-bullet/src/ludo/bullet/: debug.cpp  debug.h  math.cpp  math.h  physics.cpp
ludo-demos/: CMakeLists.txt
ludo-demos/assets/models/: minifig.blend  minifig.dae
ludo-demos/src/: importy.cpp  noisy.cpp  physicy.cpp  spinny.cpp
ludo-glfw/: CMakeLists.txt
ludo-glfw/src/ludo/glfw/: input.cpp  input.h  windowing.cpp
ludo-opengl/: CMakeLists.txt
ludo-opengl/src/ludo/opengl/: buffers.cpp  built_ins.cpp  built_ins.h  compute.cpp  default_shaders.cpp  default_shaders.h  fences.cpp  frame_buffers.cpp  frame_buffers.h  meshes.cpp  meshes.h  render_meshes.cpp  render_programs.cpp  render_programs.h  rendering.cpp  rendering_contexts.cpp  rendering_contexts.h  shaders.cpp  shaders.h  standardized_shaders.cpp  standardized_shaders.h  textures.cpp  textures.h  util.cpp  util.h
ludo-opengl/src/ludo/opengl/data/: buffers.cpp
ludo-opengl/src/ludo/opengl/graphs/: linear_octree.cpp
ludo-opengl/src/ludo/opengl/spatial/: grid3.cpp
ludo-stb/: CMakeLists.txt
ludo-stb/src/ludo/stb/: textures.cpp
ludo/src/ludo/: algorithm.h  algorithm.hpp  animation.cpp  animation.h  api.h  buffers.cpp  buffers.h  buffers.hpp  compute.h  core.cpp  core.h  data.h  data.hpp  ecs.cpp  ecs.h  ecs.hpp  files.cpp  files.h  graphs.cpp  graphs.h  importing.h  input.h  logging.cpp  logging.h  memory.cpp  memory.h  memory.hpp  meshes.cpp  meshes.h  noise.cpp  noise.h  physics.h  rendering.cpp  rendering.h  scripts.cpp  scripts.h  scripts.hpp  tasks.cpp  tasks.h  testing.cpp  (+11 more)
ludo/src/ludo/data/: arrays.h  arrays.hpp  buffers.cpp  buffers.h  buffers.hpp  data.cpp  data.h  data.hpp  heaps.cpp  heaps.h  heaps.hpp
ludo/src/ludo/graphs/: dynamic_octree.cpp  linear_octree.cpp  util.cpp  util.h
ludo/src/ludo/math/: distance.cpp  distance.h  mat.cpp  mat.h  projection.cpp  projection.h  quat.cpp  quat.h  transform.h  util.cpp  util.h  vec.cpp  vec.h
ludo/src/ludo/meshes/: box.cpp  box.h  circle.cpp  circle.h  clean.cpp  clean.h  collapse.cpp  collapse.h  cylinder.cpp  edit.cpp  edit.h  math.cpp  math.h  rectangle.cpp  rectangle.h  shapes.h  sphere_cube.cpp  sphere_ico.cpp  sphere_uv.cpp  util.cpp  util.h
ludo/src/ludo/spatial/: bounds.cpp  bounds.h  grid2.cpp  grid2.h  grid3.cpp  grid3.h  octree.cpp  octree.h  quadtree.cpp  quadtree.h
ludo/tests/: buffers.cpp  buffers.h  tests.cpp
ludo/tests/data/: arrays.cpp  arrays.h  buffers.cpp  buffers.h
ludo/tests/graphs/: dynamic_octree.cpp  dynamic_octree.h  linear_octree.cpp  linear_octree.h
ludo/tests/math/: mat.cpp  mat.h  projection.cpp  projection.h  quat.cpp  quat.h  vec.cpp  vec.h
ludo/tests/spatial/: grid2.cpp  grid2.h  grid3.cpp  grid3.h  octree.cpp  octree.h  quadtree.cpp  quadtree.h
